# qt_uiautomatorviewer

./: .gitignore  CMakeLists.txt  README.md  README_en.md  main.cpp  qt6.natvis  version.h.in  version.rc.in
lang/: zh_cn.ts
res/: resource.qrc
ui/main/: mainwindow.cpp  mainwindow.h  mainwindow.ui
ui/option/: optiondialog.cpp  optiondialog.h  optiondialog.ui  settingdialog.cpp  settingdialog.h  settingdialog.ui
utils/: adb.cpp  adb.h  managetreexml.cpp  managetreexml.h  uisetting.cpp  uisetting.h
